--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo.png" alt="logo" class="nav-logo">
-                    <span>Navbar</span> 
+                    <img src="img/logo.png" alt="logo" class="nav-logo" />
+                    <span>Navbar</span>
                 </a>
                 <button
                     class="navbar-toggler"
@@ -50,6 +50,15 @@
                 </div>
             </div>
         </nav>
+        <div class="intro text-center d-flex align-items-center">
+            <div class="container">
+                <h1 class="display-1">Best website on Bootstrap 4</h1>
+                <p class="lead">
+                    Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo
+                    luctus.
+                </p>
+            </div>
+        </div>
 
         <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
