--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="css/style.css" />
-        <title>Bootstrap side</title>
+        <title>Bootstrap site</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -50,15 +50,149 @@
                 </div>
             </div>
         </nav>
+
         <div class="intro text-center d-flex align-items-center">
             <div class="container">
-                <h1 class="display-1">Best website on Bootstrap 4</h1>
+                <h1 class="display-2">Best website on Bootstrap 4</h1>
                 <p class="lead">
                     Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo
                     luctus.
                 </p>
             </div>
         </div>
+
+        <main class="main mt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="card mb-4">
+                            <img src="img/author.jpg" class="card-img-top" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">About me</h5>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the bulk of the
+                                    card's content.
+                                </p>
+                                <p class="card-text">
+                                    Some quick example text to build on the card title and make up the bulk of the
+                                    card's content.
+                                </p>
+                            </div>
+                        </div>
+
+                        <h3>Subscribe</h3>
+                        <div class="block p-3 mb-4">
+                            <form>
+                                <div class="form-group">
+                                    <input
+                                        type="email"
+                                        class="form-control"
+                                        id="exampleInputEmail1"
+                                        aria-describedby="emailHelp"
+                                        placeholder="Enter email "
+                                    />
+                                    <small id="emailHelp" class="form-text text-muted"
+                                        >We'll never share your email with anyone else.</small
+                                    >
+                                </div>
+                                <button type="submit" class="btn btn-block btn-success">Submit</button>
+                            </form>
+                        </div>
+                    </div>
+                    <!-- col-3 -->
+
+                    <div class="col-6">
+                        <div class="card mb-3">
+                            <img src="img/photo-1.jpg" class="card-img-top" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">Post title</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, sed reiciendis! Omnis
+                                    culpa suscipit odit quidem vero molestias sit error. Inventore suscipit et dicta
+                                    sunt!
+                                </p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                <a href="#" class="btn btn-outline-primary">Read more</a>
+                            </div>
+                        </div>
+                        <div class="card mb-3">
+                            <img src="img/photo-2.jpg" class="card-img-top" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">Post title</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, sed reiciendis! Omnis
+                                    culpa suscipit odit quidem vero molestias sit error. Inventore suscipit et dicta
+                                    sunt!
+                                </p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                <a href="#" class="btn btn-outline-primary">Read more</a>
+                            </div>
+                        </div>
+                        <div class="card mb-3">
+                            <img src="img/photo-3.jpg" class="card-img-top" alt="" />
+                            <div class="card-body">
+                                <h5 class="card-title">Post title</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, sed reiciendis! Omnis
+                                    culpa suscipit odit quidem vero molestias sit error. Inventore suscipit et dicta
+                                    sunt!
+                                </p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                <a href="#" class="btn btn-outline-primary">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- col-6 -->
+
+                    <div class="col-3">
+                        <div class="list-group mb-4">
+                            <a href="#" class="list-group-item list-group-item-action active"> Section </a>
+                            <a href="#" class="list-group-item list-group-item-action">Section2</a>
+                            <a href="#" class="list-group-item list-group-item-action">Section3</a>
+                            <a href="#" class="list-group-item list-group-item-action">Section4</a>
+                            <a href="#" class="list-group-item list-group-item-action disabled">Section5</a>
+                        </div>
+
+                        <h3>Teg Cloud</h3>
+                        <div class="block mb-4">
+                            <a href="#" class="badge badge-secondary">rest</a>
+                            <a href="#" class="badge badge-primary">travel</a>
+                            <a href="#" class="badge badge-success">mountain</a>
+                            <a href="#" class="badge badge-danger">world</a>
+                            <a href="#" class="badge badge-warning">nature</a>
+                            <a href="#" class="badge badge-info">photos</a>
+                        </div>
+
+                        <h3>Gallery</h3>
+                        <div class="block">
+                            <div class="row no-gutters">
+                                <div class="col-6">
+                                    <img class="img-fluid" src="img/gallery-1.jpg" alt="" />
+                                </div>
+                                <div class="col-6">
+                                    <img class="img-fluid" src="img/gallery-2.jpg" alt="" />
+                                </div>
+                                <div class="col-6">
+                                    <img class="img-fluid" src="img/gallery-3.jpg" alt="" />
+                                </div>
+                                <div class="col-6">
+                                    <img class="img-fluid" src="img/gallery-4.jpg" alt="" />
+                                </div>
+                                <div class="col-6">
+                                    <img class="img-fluid" src="img/gallery-5.jpg" alt="" />
+                                </div>
+                                <div class="col-6">
+                                    <img class="img-fluid" src="img/gallery-6.jpg" alt="" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- col-3 -->
+                </div>
+            </div>
+        </main>
+
+        <footer class="footer"></footer>
 
         <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
