--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
                                 <a href="#" class="btn btn-outline-primary">Read more</a>
                             </div>
                         </div>
+
+                        <nav aria-label="Page navigation example" class="mt-4">
+                            <ul class="pagination">
+                                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                            </ul>
+                        </nav>
                     </div>
                     <!-- col-6 -->
 
@@ -192,7 +202,44 @@
             </div>
         </main>
 
-        <footer class="footer"></footer>
+        <footer class="footer mt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h3>Traveler's Blog</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quae magni voluptatum quasi
+                            laboriosam excepturi. Porro atque ab saepe aperiam, magni praesentium perspiciatis sunt
+                            officia!
+                        </p>
+                    </div>
+                    <div class="col">
+                        <h3>Contacts</h3>
+                        <address>
+                            Twitter, Inc. <br>
+                            1355 Market St, Suite 900 <br>
+                            San Francisco, CA 94103 <br>
+                            P: (123) 456-7890 <br>
+                        </address>
+                        
+                    </div>
+                    <div class="col">
+                        <h3>Navigation</h3>
+                        <nav class="nav flex-column">
+                            <a class="nav-link active" href="#">Home</a>
+                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#">Contacts</a>
+                          </nav>
+                    </div>
+            </div>
+            </div>
+        </footer>
+        <div class="copyright">
+            <div class="container">
+                <img src="img/logo.png" alt="">
+                <p>© Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+        </div>
 
         <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
