--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <main class="main mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3 order-lg-1 col-md-12 order-3">
                         <div class="card mb-4">
                             <img src="img/author.jpg" class="card-img-top" alt="" />
                             <div class="card-body">
@@ -101,7 +101,7 @@
                     </div>
                     <!-- col-3 -->
 
-                    <div class="col-6">
+                    <div class="col-lg-6 order-lg-2 col-md-8 order-1">
                         <div class="card mb-3">
                             <img src="img/photo-1.jpg" class="card-img-top" alt="" />
                             <div class="card-body">
@@ -154,7 +154,7 @@
                     </div>
                     <!-- col-6 -->
 
-                    <div class="col-3">
+                    <div class="col-lg-3 order-lg-3 col-md-4 order-2">
                         <div class="list-group mb-4">
                             <a href="#" class="list-group-item list-group-item-action active"> Section </a>
                             <a href="#" class="list-group-item list-group-item-action">Section2</a>
@@ -205,7 +205,7 @@
         <footer class="footer mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-lg-4 col-md-12">
                         <h3>Traveler's Blog</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quae magni voluptatum quasi
@@ -213,7 +213,7 @@
                             officia!
                         </p>
                     </div>
-                    <div class="col">
+                    <div class="col-lg-4 col-md-6">
                         <h3>Contacts</h3>
                         <address>
                             Twitter, Inc. <br>
@@ -223,7 +223,7 @@
                         </address>
                         
                     </div>
-                    <div class="col">
+                    <div class="col-lg-4 col-md-6">
                         <h3>Navigation</h3>
                         <nav class="nav flex-column">
                             <a class="nav-link active" href="#">Home</a>
